# yolov8_sgbm_ros

./: README_CN.md  readme.md
yolov8_ros/: CMakeLists.txt  package.xml
yolov8_ros/launch/: yolo_ros.launch
yolov8_ros/scripts/: sgbm.py  test.py  yolo_v8.py
yolov8_ros/ultralytics/: README.zh-CN.md
