<?xml version="1.0"?>
<package format="2">
  <name>yolov8_ros</name>
  <version>1.0.0</version>
  <description>The yolov8_ros package</description>

  <maintainer email="qq44642754@163.com">Zhitao Zheng</maintainer>

  <license>APLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <build_depend>opencv2</build_depend> 
  <exec_depend>opencv2</exec_depend>
  
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>

  <build_depend>libopencv-dev</build_depend>
  <exec_depend>libopencv-dev</exec_depend>

  <export>

  </export>
</package>
